--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <img id="banner" src="cavalo.jpg">
         <div class="principal">
-            <h2 class="titulo-centralizado">Digite seu nome completo</h2>
+            <h2 class="titulo-centralizado">grazi</h2>
      
             <p> <strong>Componentes curriculares afins</strong> Quais disciplinas você tem mais afinidade</p>
 
