--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1 class="titulo-principal">Um pouco sobre mim</h1>
         </header>
 
-        <img id="banner" src="cavalo.jpg">
+        <img id="banner" src="agro.jpg">
         <div class="principal">
             <h2 class="titulo-centralizado">grazi</h2>
      
@@ -32,7 +32,7 @@
                 <li class="itens">..........</li>
             </ul>
 
-            <img src="buque de rosas.jpg" class="imagembeneficios">
+            <img src="colheitadeira.jpg" class="imagembeneficios">
             <! tag para inserir imagem nas páginas web ->
         </div>
     </body>
