--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="principal">
             <h2 class="titulo-centralizado">grazi</h2>
      
-            <p> <strong>Componentes curriculares afins</strong> Quais disciplinas você tem mais afinidade</p>
+            <p> <strong>Componentes curriculares afins</strong> educaçao fisica,projeto de vida</p>
 
             <p id="missao"><em>Gostos musicais <strong>Rock, Pop, Sertanejo, Tradicionalista</strong>.</em></p>
 
