--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      
             <p> <strong>Componentes curriculares afins</strong> educaçao fisica,projeto de vida</p>
 
-            <p id="missao"><em>Gostos musicais <strong>Rock, Pop, Sertanejo, Tradicionalista</strong>.</em></p>
+            <p id="missao"><em>Gostos musicais <strong>sertanejo,funk</strong>.</em></p>
 
             <p>Diga um pouco sobre as músicas preferidas e em quais momentos</p>
         </div>
