--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <h3 class="titulo-centralizado">Minhas qualidades</h3>
 
             <ul>
-                <li class="itens">......</li>
-                <li class="itens">.........</li>
-                <li class="itens">..........</li>
-                <li class="itens">..........</li>
+                <li class="itens">gente boa</li>
+                <li class="itens">amorosa</li>
+                <li class="itens">amiga</li>
+                <li class="itens">companheira</li>
             </ul>
 
             <img src="colheitadeira.jpg" class="imagembeneficios">
