--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <p id="missao"><em>Gostos musicais <strong>sertanejo,funk</strong>.</em></p>
 
-            <p>Diga um pouco sobre as músicas preferidas e em quais momentos</p>
+            <p>amo escutar sertanejo qundo estou limpando a casa e tomando banho</p>
         </div>
 
         <div class="beneficios">
